# set-psi-validation

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLOW.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  catalog.json  pyproject.toml  sync_skills.sh
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
dashboards/: app.js  index.html  style.css
docs/: 002-rfc-gas-trigger-v01.md  007-project-summary-v01.md  009-rfc-schema-org-embed-v01.md  010-regime-taxonomy-v01.json  011-rfc-pipeline-refinements-v01.md  012-rfc-community-standards-v01.md  FLOW.md  ROADMAP.md  regime-taxonomy.jsonld
logs/: app.jsonl  failures.jsonl
market-data/: 2026-06-14.json  2026-06-15-000000.json  2026-06-19-000000.json
memory/: 20260614-120000-project-overview.md  20260614-140000-psi-design-complete.md  20260614-150000-schema-org-mapping.md  20260614-160000-pipeline-implementation.md  20260614-170000-api-standardization-complete.md  20260614-180000-setsmart-integration.md  20260614-190000-project-quality-and-ci-restored.md  20260614-190000-validation-engine-complete.md  20260614-200000-taxonomy-rename-ci-green.md  20260614-210000-decoupled-prediction-capture.md  20260614-220000-secure-local-test-runner.md  20260615-044500-workflow-fix-granular-validation.md  20260615-195500-validation-engine-three-window.md  20260615-203000-market-cycle-report.md  20260616-150000-community-standards-adoption.md  20260616-193000-workflow-scheduling-fixed.md  20260617-110000-workflow-timezone-observability.md  20260617-113900-agents-claude-audit.md  (+5 more)
(+327 files in other folders)
